# binance-historical

./: .gitignore  README.md  pyproject.toml
binance_historical/: __init__.py  exceptions.py
binance_historical/extract/: __init__.py  fundings.py  klines.py
binance_historical/utils/: __init__.py  consts.py  database.py  is_already_saved.py  local_saved.py  utils.py
tests/: test_extract_fundings.py  test_extract_klines.py  test_local_saved.py
